RESOLVED FIXED 208834
[macOS] Notification observer is not removed
https://bugs.webkit.org/show_bug.cgi?id=208834
Summary [macOS] Notification observer is not removed
Per Arne Vollan
Reported 2020-03-09 15:01:13 PDT
The Accessibility notification observer is not being removed on macOS.
Attachments
Patch (8.71 KB, patch)
2020-03-09 15:09 PDT, Per Arne Vollan
thorton: review+
Patch (8.71 KB, patch)
2020-03-09 15:25 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2020-03-09 15:01:38 PDT
Per Arne Vollan
Comment 2 2020-03-09 15:09:31 PDT
Per Arne Vollan
Comment 3 2020-03-09 15:25:19 PDT
Per Arne Vollan
Comment 4 2020-03-09 15:25:46 PDT
Thanks for reviewing!
Per Arne Vollan
Comment 5 2020-03-09 16:48:58 PDT
Darin Adler
Comment 6 2020-03-17 15:52:32 PDT
Comment on attachment 393079 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=393079&action=review > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:693 > #endif > #endif // PLATFORM(IOS) > #endif // !PLATFORM(IOS_FAMILY) I think we’d do better at understanding the conditionals here if this wasn’t nested.
Per Arne Vollan
Comment 7 2020-03-17 16:05:46 PDT
(In reply to Darin Adler from comment #6) > Comment on attachment 393079 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=393079&action=review > > > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:693 > > #endif > > #endif // PLATFORM(IOS) > > #endif // !PLATFORM(IOS_FAMILY) > > I think we’d do better at understanding the conditionals here if this wasn’t > nested. That's a good point, it can be a bit confusing. Thanks for reviewing!
Note You need to log in before you can comment on or make changes to this bug.