Cherry-pick r258174. rdar://problem/60250780

[macOS] Notification observer is not removed
    https://bugs.webkit.org/show_bug.cgi?id=208834

    Reviewed by Tim Horton.

    Source/WebKit:

    The Accessibility notification observer is not being removed on macOS.

    API test: WebKit.EnableAccessibilityCrash

    * UIProcess/Cocoa/WebProcessPoolCocoa.mm:
    (WebKit::WebProcessPool::unregisterNotificationObservers):

    Tools:

    * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
    * TestWebKitAPI/Tests/WebKit/EnableAccessibility.mm: Added.
    (TEST):

    Canonical link: https://commits.webkit.org/221768@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258174 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/221734.5@safari-610.1.7-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.7-branch@258179 268f45cc-cd09-0410-ab3c-d52691b4dbfc